--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <version>1.2.0</version>
     </parent>
 
+    <name>${project.groupId}:${project.artifactId}</name>
     <artifactId>helper</artifactId>
     <version>1.0.0</version>
 
