--- a/pom.xml
+++ b/pom.xml
@@ -14,30 +14,30 @@
     <artifactId>helper</artifactId>
     <version>1.0.0</version>
 
+    <properties>
+        <minio.version>8.6.0</minio.version>
+        <slf4j.version>2.0.17</slf4j.version>
+        <lombok.version>1.18.34</lombok.version>
+    </properties>
+    
     <dependencies>
         <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
-            <version>8.5.13</version>
+            <version>${minio.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.17</version>
+            <version>${slf4j.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.34</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.8.2</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
