--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <name>${project.groupId}:${project.artifactId}</name>
     <artifactId>helper</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-RC1</version>
 
     <properties>
         <minio.version>8.6.0</minio.version>
